# ChangeLog for net-libs/qxmpp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.28 2012/12/03 20:09:18 pinkbyte Exp $

  03 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
  Add upstream information

  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild,
  qxmpp-9999.ebuild:
  Fix prefix path for Gentoo Prefix compatibility

  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild:
  Add keyword ~amd64-linux

  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
  Add missing test USE-flag in live ebuild

  14 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild,
  qxmpp-9999.ebuild:
  Add missing x11-libs/qt-test, needed for tests

  05 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> -qxmpp-0.3.45.2.ebuild,
  -qxmpp-0.7.3.ebuild:
  Drop old versions

  04 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-0.7.4.ebuild,
  qxmpp-9999.ebuild:
  Add doc USE-flag wrt bug #437174, thanks to Nikoli

  01 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
  Use proper path for documentation in live ebuild too

*qxmpp-0.7.4 (01 Oct 2012)

  01 Oct 2012; Sergey Popov <pinkbyte@gentoo.org> +qxmpp-0.7.4.ebuild:
  Version bump

*qxmpp-0.7.3 (07 Sep 2012)

  07 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> +qxmpp-0.7.3.ebuild:
  Version bump

  07 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
  Bump live ebuild to EAPI 4

  04 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
  Remove extras USE flag from IUSE

  04 Sep 2012; Sergey Popov <pinkbyte@gentoo.org> qxmpp-9999.ebuild:
  Remove extras USE flag from live ebuild and set new URL for upstream repo

  15 Jul 2012; Michael Palimaka <kensington@gentoo.org> qxmpp-0.3.45.2.ebuild,
  qxmpp-0.3.61-r2.ebuild, qxmpp-9999.ebuild:
  Add missing slot dependencies on Qt.

  05 Jul 2012; Jeff Horelick <jdhore@gentoo.org> qxmpp-0.3.61-r2.ebuild: