@@ -3,9 +3,11 @@ AUX 01_enable_shared_linking.patch 261 SHA256 042f8c8462e9fe8fc840d2297991e690d0
 DIST qxmpp-0.3.61-extras.tar.bz2 205766 SHA256 4309a8d91fe8b71214b1e7133f77bf23527f5e366f4bb44b8d2235da4622eb25 SHA512 8a44e100ec18281a26d886eb9ccb543cf7386bbe7345061f2c32e78473e75011ff5b08cf68b91f04dc6bab288377d295d3e476774185e889bd01878c35388206 WHIRLPOOL d51b485b8995367bb758d50785e09c6f207a1c8cf936d6e1f4759521929ac02d5b569ebe4fde1afcd45387b452177e26bf24d0ff1da8e8acc7b04fdebd84911e
 DIST qxmpp-0.6.3.1-extras.tar.bz2 211653 SHA256 caedb40a26e450d18b567f19348deea49f0c2587c8ac4e0451969d6403753225 SHA512 25c012fbd7ce8d69aae12303186488488c736903d31763b491dba4af4840d64260831146b26c0a5a6e43b6dc03bc62d8ff0912050e5535b7cc20c584b6951c18 WHIRLPOOL 66aaa9fabced20c7fc2edaac10ab03353944005dc0eaaf49afd45d493d5358d1e416995f33d839a826ec56ab402e4cf66d500e6f9faae8a78a75e8878b72b7a5
 DIST qxmpp-0.7.4.tar.gz 1076965 SHA256 0aef904b29024d8435bde9d5e73e3e9ce47577f487a497cf2e8d10774fdf3b8d SHA512 a11c6073ba10ef699f1cf3d5a2001989a9babcfae3a6760525d808ce15a077b7031bcfc83dd73fd417d1e7415ae256eb7008457cac2e3204856444e5db53883d WHIRLPOOL 0bc602b03ff9d9ff5221fe2ff4a8c5b4564e758438492be7df4e8d0f76105ec9d3a867614210ae905975ee15c855d59eb2dcf68596d13426d122a54f4444f6cc
+DIST qxmpp-0.7.5.tar.gz 1075987 SHA256 0137da4b176e16bb72c5efde4cec7da750f25ce7d0f6bbb0fcfdccc8765e3d35 SHA512 399a034a7a30f545a890e3a8193de4c6a83d844ec3e6f75084b91f3260662d49d57ecf1f45c8df08136626077535ee7e580ff049a5950f0813352118e36873ea WHIRLPOOL 7c6c872523ff4403660bbb3d53696ecb90e7791f7d95347cfd09747499f8ad045480977aa08dcbdd7f031be24ac80d9df4d7730c52f9cdabdd98a584f1fc7848
 EBUILD qxmpp-0.3.61-r2.ebuild 895 SHA256 47750487b944b04d9f46dac6a5b8c867456a1eff321698d83a0b3cc4834618d7 SHA512 fb6594ddfdac435264ee77cdbafe8e544fb09f2cee3f06cc84f946a24536f75cc21d97ee93978c779f2a1e9acfc0bccf9267648a56afcce4b4ec85a28e6e0a12 WHIRLPOOL add34dacbdacb0d7aea5961de5985cc76dff117477a6d7d2787169b3f9a982c8e09e2823d2f0a12cf9f6988595e0f85fafe0cc98ba4755b454b97dba3748b153
 EBUILD qxmpp-0.6.3.1.ebuild 836 SHA256 a5190bad72acf4df60d573c1255aeae8936f7067641c20bb4db31830282c6881 SHA512 c64d562504f55649ed3dc1251766a4ead6212f21275b3078edc40a73652165c1d32558cb76efe86ab1fc08cda416beae9f5817b816849cb74c54efa02ebd0ba2 WHIRLPOOL a357fdf0f9215bdd33f5b600b0c612aaf8fe2e91b71013ec46f832f482d570f964521ffe09b1f223198706b3622240a610cf82328e637b4f551fb06c7715e15b
 EBUILD qxmpp-0.7.4.ebuild 1196 SHA256 92cd213cacca16c14559326ee75cd46dbffb0edc5fbf7e7196ff18a1fc86139d SHA512 6e99af0858e195a4ccfd8764bf196d119916e1b09303609c06d06ae9dc87565556dd26f3d15994149c5927f10b3a71652540faac8c68791745267e0c2ca973c5 WHIRLPOOL 74307621c981569f77d1ee70a964df8e7876717d4adca485cdcb00358523848a9fe92135b875f7c0d5ac372f13e4dfa8c60d8cd33799ff558169596788b9948c
-EBUILD qxmpp-9999.ebuild 1171 SHA256 120e2275fa6ed6a2c6083828ab3f7b3be19261c206bb887ee91688e9d937362b SHA512 779d05af2d5b621f56350235ada8ab179cb7e94373bfdb52ca2eb4ac1516e27e783938e4f353c6ac54a113b5ee867eb56d8f7b10afb4c0d84a68d445dd2a8f01 WHIRLPOOL 1b3f202f6ad3edb8117e6d1a0ed06c2f45da8e75b05dce683587340e450a25d2dfc22ec8f86acc216a2527bf7693ad9ddd8ace3da55afb076692468c3d468ebf
-MISC ChangeLog 3921 SHA256 ac9b6eb06c1cedaf1bc6eb5946f4c33b791f14d9759c74e3875dec3b1174ceb4 SHA512 ae9f0b38a8e8344742c0e322cb05feed9266ba79c24ccff8f8de346c7d1a50a1047af63dbe36fc556d65cedc7a3fafc735dfb71da5a6e29abb2a745a20106ea5 WHIRLPOOL 2779579050594cd2bea5a5b55fd7d6e1cfe93c12f92f9eb6c3145bbea0636d8ab8c3f763e7dbd2d197f28af419940cc6296bd7be800a53caa37b8b7dfb9331d7
+EBUILD qxmpp-0.7.5.ebuild 1196 SHA256 c4ba9285c5e4c86040159a29d84e0e2e99ae8d9ccc967f38769667794a3dae70 SHA512 547d9d35a645161d5c25cb79b700ee43e2722a3c30aaf3e95b708dbe5b374d2ed3c81f5bfcbfb4c4dff2a5ff5c8c552f069a2f2d229eb42522856a371a34cece WHIRLPOOL 25a05223c3d5a0e4215883e928b4e0da7e25a7bf62d3f3d8d9e21ecdcfa9fb314ffd41997783a5b8dfebd5e81e18666e63c357b557f62be00c5dc249ef4d65a7
+EBUILD qxmpp-9999.ebuild 1171 SHA256 3aa8fe769ccfec2f292ab835e153f391b3f8df6554b1b171cd92cb1a162a99eb SHA512 759f30b5782a933af9e4799fba688466b35a415b1d15fd820064bd5dc4c4363ac1b523b6c5045f21844dab3dcda43f6f427702bfb8077cd65b378b9749894223 WHIRLPOOL 679411abd246b6db56deef21636c1286f4c9bdd88b26d159852bce8298ffaa1474d0abba8f784370747b26fdc70facf3dd5de610326028d87cd7a2a37efa41f3
+MISC ChangeLog 4073 SHA256 5bc0c6a3c71a4a0def3819b3f09d3d317d8a098d33f53aac9b4d2ea0d3495eef SHA512 44d220d152b8ecb0c711f9e356e19c72724abe4c4a3e3fe9f6e28b98d72ecc3a4dba04a0834c67fb8e755c37020ecb0c5e178e87fc8eb33fb5b3b43f316b97ab WHIRLPOOL 69b2ab20e29ce7ea07abaf357c6092318b7b28a44a6e313bda6dee6118da25c4bde31c0f631ab7481c68b04b80959a87cb78c704194fe0741a779d8f2aa97c90
 MISC metadata.xml 414 SHA256 d92f8fdb932957d1633d4cc2cbf05b03c9b4f68959d45da550da0dd078adbb6d SHA512 535e805939893f6580b417116f2d0bb004ac2aa6392e6e0b3c3b9227440ecab1a8a5d6fcf65b856603ad98d6bd2b7f851508c9f2b8895780d15216362f4bbeb0 WHIRLPOOL dd6ca35b18472ddee1d2b14192547a9b1233cfe1c2e527e29f9bb344976c9e6790066192eb7e0e186cadfdaf2e792c5a3e15a53f818fbaefbefa3160b5947c95
