@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/qxmpp
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.28 2012/12/03 20:09:18 pinkbyte Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/qxmpp/ChangeLog,v 1.29 2013/01/14 16:53:52 pinkbyte Exp $
+
+*qxmpp-0.7.5 (14 Jan 2013)
+
+  14 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> +qxmpp-0.7.5.ebuild,
+  qxmpp-9999.ebuild:
+  Bump EAPI to 5, version bump
 
   03 Dec 2012; Sergey Popov <pinkbyte@gentoo.org> metadata.xml:
   Add upstream information
